--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,19 +10,10 @@
   </head>
 
   <body>
-  <body align='center'>
 
-    <p class='notice'><%= notice %></p>
-    <p class='alert'><%= alert %></p>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
     <%= yield %>
   </body>
-
-  <% if current_user %>
-    <%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete %>
-  <% else %>
-    <%= link_to "Iniciar Sesión", new_user_session_path %>
-    <%= link_to "Registrarme", new_user_registration_path %>
-  <% end %>
-
 </html>
