--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,10 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
+    <% if current_user %>
+      <li><%= link_to "Sign out", destroy_user_session_path, method: :delete  %></li>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
