Se arregpa visualmente el index

--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -9,7 +9,7 @@
     <%= @request.id_usuario %>
 </p>
 <p>
-    <strong>Id_publicaciones: </strong>
+    <strong>Id_publicacion: </strong>
     <%= @request.id_publicacion %>
 </p>
 <p>
