--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -5,11 +5,11 @@
 <div style="display: flex, flex-flow: row wrap; ">
     <% @requests.each do |request|%>
         <div style="border: solid 1px; width: 200px; padding: 10px; align-text: center; margin: 5px;">
-        <h3><%= request.id_solicitud%></h3>
-        <p><%= request.id_usuario%><p>
-        <p><%= request.id_publicacion%><p>
-        <p><%= request.estado%><p>
-        <p><%= request.descripcion%><p>
+        <h3>Id solicitud: <%= request.id_solicitud%></h3>
+        <p>Id usuario: <%= request.id_usuario%><p>
+        <p>Id publicación: <%= request.id_publicacion%><p>
+        <p>Estado: <%= request.estado%><p>
+        <p>Descripcion: <%= request.descripcion%><p>
         <p><%= link_to 'Ver detalles', requests_show_path(:id => request.id) %></p>
 </div>
 <% end %>
