--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,16 @@
   </head>
 
   <body>
-
-    <p class="notice"><%= notice %></p>
+    <div style="border: 5px outset red; width: 300px; 
+    padding: 10px; align-text: center; margin: 5px; background-color: lightblue; ">
+      <h1>DCCARPOOLING</h1>
+    </div>
     <p class="alert"><%= alert %></p>
-
     <% if current_user %>
-      <li><%= link_to "Sign out", destroy_user_session_path, method: :delete  %></li>
+      <b>Opciones</b>
+      <li><%= link_to "Publicaciones", turnos_index_path %></li>
+      <li><%= link_to "Cuenta", users_show_path(:id => current_user.id) %></li>
+      <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
     <% end %>
 
     <%= yield %>
