--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <p class="alert"><%= alert %></p>
     <% if current_user %>
       <b>Opciones</b>
-      <li><%= link_to "Publicaciones", turnos_index_path %></li>
+      <li><%= link_to "Turnos", turnos_index_path %></li>
       <li><%= link_to "Cuenta", users_show_path(:id => current_user.id) %></li>
       <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
     <% end %>
