--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -1,29 +1,28 @@
-<h1>Requests#edit</h1>
+<h1>Editar solicitud</h1>
 
 <%= form_with(model: @request, method: :patch, url: requests_update_path(:id => @request.id)) do |form| %>
 
+    <%if @request.id_usuario_solicitud == current_user.id%>
+        <div>
+            <%= form.label :Descripción %>
+            <%= form.text_field :descripcion%>
+        </div>
+    <% end %>
+    <%if @request.id_usuario == current_user.id%>
+        <% def options_for_status
+            [
+            ['Aceptar Solicitud','ACEPTADO'],
+            ['Rechazar Solicitud','RECHAZADO'],
+            ['Mantener Pendiente','PENDIENTE']
+            ]
+        end %>
+        <div>
+            <%= form.label :Respuesta_Solicitud %>
+            <%= form.select :estado, options_for_status, {}, prompt: 'Select One' %>
+        </div>
+    <% end %>
     <div>
-        <%= form.label :Id_solicitud %>
-        <%= form.text_field :id_solicitud%>
-    </div>
-    <div>
-        <%= form.label :Id_usuario %>
-        <%= form.text_field :id_usuario%>
-    </div>
-    <div>
-        <%= form.label :Id_publicacion %>
-        <%= form.text_field :id_publicacion%>
-    </div>
-    <div>
-        <%= form.label :Estado %>
-        <%= form.text_field :estado%>
-    </div>
-    <div>
-        <%= form.label :Descripcion %>
-        <%= form.text_field :descripcion%>
-    </div>
-    <div>
-        <%= form.submit 'Editar request' %>
+        <%= form.submit 'Editar' %>
     </div>
 
 <% end %>
