--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,17 +1,17 @@
-<h1>Publicaciones_Request</h1>
+<h1>Resumen Solicitudes</h1>
 
 <%= notice %>
 
 <div style="display: flex, flex-flow: row wrap; ">
     <% @requests.each do |request|%>
         <div style="border: solid 1px; width: 200px; padding: 10px; align-text: center; margin: 5px;">
-        <h3>Id solicitud: <%= request.id_solicitud%></h3>
-        <p>Id usuario: <%= request.id_usuario%><p>
-        <p>Id publicación: <%= request.id_publicacion%><p>
+        <p>Id Solicitud: <%= request.id%><p>
+        <p>Id Usuario Turno: <%= request.id_usuario%><p>
+        <p>Id Usuario Solicitud: <%= request.id_usuario_solicitud%><p>
+        <p>Id Publicación: <%= request.id_publicacion%><p>
         <p>Estado: <%= request.estado%><p>
-        <p>Descripcion: <%= request.descripcion%><p>
+        <p>Descripción: <%= request.descripcion%><p>
         <p><%= link_to 'Ver detalles', requests_show_path(:id => request.id) %></p>
 </div>
 <% end %>
 
-<%= link_to 'Nuevo request', requests_new_path %>
