--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
   </head>
 
   <body>
-    <div style="border: 5px outset red; width: 300px; 
-    padding: 10px; align-text: center; margin: 5px; background-color: lightblue; ">
+    <div style="border: 5px outset red; width: 300px; padding: 10px; 
+    align-text: center; margin: 5px; background-color: lightblue; text-align: center;">
       <h1>DCCARPOOLING</h1>
     </div>
     <p class="alert"><%= alert %></p>
@@ -19,6 +19,7 @@
       <b>Opciones</b>
       <li><%= link_to "Turnos", turnos_index_path %></li>
       <li><%= link_to "Cuenta", users_show_path(:id => current_user.id) %></li>
+      <li><%= link_to "Solicitudes", requests_index_path %></li>
       <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
     <% end %>
 
