Actualización CRUD reseña, agregar edit y delete

--- a/app/views/resenas/index.html.erb
+++ b/app/views/resenas/index.html.erb
@@ -1,16 +1,16 @@
 <h1>Reseñas</h1>
 
-<%= notice %>
+<li><%= link_to 'Nueva reseña', resenas_new_path %></li>
+<br>
 
 <div style="display: flex; flex-flow: row wrap; ">
     <% @resenas.each do |resena|%>
         <div style="border: solid 1px; width: 200px; padding: 10px; align-text: center; margin: 5px;">
-        <p>ID Reseña: <%= resena.id%><p>
         <p>ID Viaje: <%= resena.id_viaje%><p>
-        <p>ID Usuario Evaluador: <%= resena.id_usuario_evaluador%><p>
-        <p>ID Usuario Evaluado: <%= resena.id_usuario_evaluado%><p>
+        <p>ID Cliente Evaluador: <%= resena.id_cliente_evaluador%><p>
+        <p>ID Cliente Evaluado: <%= resena.id_cliente_evaluado%><p>
         <p>Contenido: <%= resena.contenido%><p>
         <p>Calificación: <%= resena.calificacion%><p>
-        <p><%= link_to 'Ver detalles', turnos_index_path %></p>
+        <p><%= link_to 'Ver detalles', resenas_show_path(:id => resena.id) %></p>
 </div>
 <% end %>
