--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -17,7 +17,7 @@
 <% end %>
 <br/>
 
-<br/><h3>Solicitudes Recibidas Procesadas</h3><br/>
+<h3>Solicitudes Recibidas Procesadas</h3>
 <div style="display: flex; flex-flow: wrap;">
     <% @requests.each do |request|%>
         <%if request.id_usuario == current_user.id and request.estado != "PENDIENTE"%>
@@ -33,7 +33,7 @@
 <% end %>
 <br/>
 
-<br/><h3>Solicitudes Enviadas Pendientes</h3><br/>
+<h3>Solicitudes Enviadas Pendientes</h3>
 <div style="display: flex; flex-flow: wrap;">
     <% @requests.each do |request|%>
         <%if request.id_usuario_solicitud == current_user.id and request.estado == "PENDIENTE"%>
@@ -50,7 +50,7 @@
 <% end %>
 <br/>
 
-<br/><h3>Solicitudes Enviadas Procesadas</h3><br/>
+<h3>Solicitudes Enviadas Procesadas</h3>
 <div style="display: flex; flex-flow: wrap;">
     <% @requests.each do |request|%>
         <%if request.id_usuario_solicitud != current_user.id and request.estado != "PENDIENTE"%>
