Actualizacion de archivos

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
         <div class="navbar-end">
           <div class="navbar-item">
             <div class="buttons">
-              <a class="button is-primary outlined has-background-warning"><%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+              <a class="button is-light has-background-warning"><%= link_to "Sign out", destroy_user_session_path, method: :delete %>
               </a>
               <a class="button is-light has-background-warning">
                 Help
