--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -6,15 +6,15 @@
 </p>
 <p>
     <strong>Id Usuario Turno: </strong>
-    <%= @request.id_usuario %>
+    <%= @request.turno.user_id %>
 </p>
 <p>
     <strong>Id Usuario Solicitud: </strong>
-    <%= @request.id_usuario_solicitud %>
+    <%= @request.user_id %>
 </p>
 <p>
     <strong>Id Publicación: </strong>
-    <%= @request.id_publicacion %>
+    <%= @request.turno.id %>
 </p>
 <p>
     <strong>Estado: </strong>
