--- a/app/views/turnos/edit.html.erb
+++ b/app/views/turnos/edit.html.erb
@@ -26,7 +26,7 @@
         <%= form.label :Tipo %>
         <%= form.text_field :tipo%>
     </div>
-    <%if @turno.id_usuario == current_user.id%>
+    <%if @turno.user_id == current_user.id%>
         <% def options_for_status
             [
             ['Turno completado','COMPLETADO'],
