--- a/app/views/turnos/index.html.erb
+++ b/app/views/turnos/index.html.erb
@@ -6,11 +6,11 @@
 <h3>Turnos Activos</h3>
 <div style="display: flex; flex-flow: wrap;">
     <% @turnos.each do |turno|%>
-        <%if turno.id_usuario != current_user.id and turno.estado == "ACTIVO"%>
+        <%if turno.user_id != current_user.id and turno.estado == "ACTIVO"%>
             <div style="border: solid 1px; width: 200px; 
             padding: 10px; align-text: center; margin: 5px; background-color: lightblue;">
-            <b>ID Conductor </b><p><%= @users.find(turno.id_usuario).id%></p>
-            <b>Conductor </b><p><%= @users.find(turno.id_usuario).name%></p>
+            <b>ID Conductor </b><p><%= @users.find(turno.user_id).id%></p>
+            <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
             <b>Cantidad asientos </b><p><%= turno.cantidad_asientos%></p>
             <b>Hora salida </b><p><%= turno.hora_salida%></p>
             <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
@@ -26,12 +26,12 @@
 <h3>Turnos Solicitados Confirmados</h3>
 <div style="display: flex; flex-flow: wrap; ">
     <% @requests.each do |request|%>
-        <%if request.id_usuario_solicitud == current_user.id %>
-            <% @turno = Turno.find(request.id_publicacion)%> 
+        <%if request.user_id == current_user.id %>
+            <% @turno = Turno.find(request.turno.id)%> 
             <%if @turno.estado == "CONFIRMADO"%>
                 <div style="border: solid 1px; width: 200px; 
                 padding: 10px; align-text: center; margin: 5px; background-color: lightblue">
-                <% @user = User.find(@turno.id_usuario)%>
+                <% @user = User.find(@turno.user_id)%>
                 <b>ID Conductor </b><p><%= @user.id%></p>
                 <b>Conductor </b><p><%= @user.name%></p>
                 <b>Cantidad asientos </b><p><%= @turno.cantidad_asientos%></p>
@@ -51,8 +51,8 @@
 <h3>Turnos Solicitados Completados</h3>
 <div style="display: flex; flex-flow: wrap; ">
     <% @requests.each do |request|%>
-        <%if request.id_usuario_solicitud == current_user.id %>
-            <% @turno = Turno.find(request.id_publicacion)%> 
+        <%if request.user_id == current_user.id %>
+            <% @turno = Turno.find(request.turno.id)%> 
             <%if @turno.estado == "COMPLETADO"%>
                 <div style="border: solid 1px; width: 200px; 
                 padding: 10px; align-text: center; margin: 5px; background-color: lightblue">
