--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,34 @@
 
  @import "https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css";
 
- #logo{
-     height: auto;
-     width: auto;
- }
+ .bg-img { 
+    background-image: url(https://www.chamanexperience.com/wp-content/uploads/2020/01/Tipos-de-fotografi%CC%81a-de-paisaje-Te%CC%81cnicas-composicio%CC%81n-y-trucos-1200x385.jpg) ;
+    background-position: center center;
+    background-repeat:  no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #999;
+}
+
+#menu_list {
+    height: 150px;
+    width: 150px;
+}
+
+#boton_turnos {
+    margin: 10px;
+}
+
+#boton_sign_out {
+    margin: 10px;
+}
+
+#boton_volver {
+    background-color: transparent;
+    margin: 10px;
+}
+
+#ver_detalles {
+    background-color: transparent;
+    margin: 10px;
+}
