--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -4,7 +4,7 @@
 
     <%if @request.id_usuario_solicitud == current_user.id%>
         <div>
-            <%= form.label :Descripción %>
+            <label class="label">Descripcion</label>
             <%= form.text_field :descripcion%>
         </div>
     <% end %>
@@ -17,7 +17,7 @@
             ]
         end %>
         <div>
-            <%= form.label :Respuesta_Solicitud %>
+            <label class="label">Respuesta Solicitud</label>
             <%= form.select :estado, options_for_status, {}, prompt: 'Select One' %>
         </div>
     <% end %>
