--- a/app/views/users/registrations/show.html.erb
+++ b/app/views/users/registrations/show.html.erb
@@ -1,33 +1,34 @@
-<h1 class="title is-3">Cuenta</h1>
+<div align='center'>
+    <h1 class="title is-3">Cuenta</h1>
 
-<h3>Datos Personales</h3>
-<p>
-    <strong>Id usuario:</strong>
-    <%= @user.id %>
-</p>
-<p>
-    <strong>Nombre:</strong>
-    <%= @user.name %>
-</p>
-<p>
-    <strong>Email:</strong>
-    <%= @user.email %>
-</p>
-<p>
-    <strong>Dirección:</strong>
-    <%= @user.address %>
-</p>
-<p>
-    <strong>Género:</strong>
-    <%= @user.gender %>
-</p>
-<p>
-    <strong>Teléfono:</strong>
-    <%= @user.phone %>
-</p>
-
-<h3>Turnos Publicados Activos</h3>
-
+    <h3>Datos Personales</h3>
+    <p>
+        <strong>Id usuario:</strong>
+        <%= @user.id %>
+    </p>
+    <p>
+        <strong>Nombre:</strong>
+        <%= @user.name %>
+    </p>
+    <p>
+        <strong>Email:</strong>
+        <%= @user.email %>
+    </p>
+    <p>
+        <strong>Dirección:</strong>
+        <%= @user.address %>
+    </p>
+    <p>
+        <strong>Género:</strong>
+        <%= @user.gender %>
+    </p>
+    <p>
+        <strong>Teléfono:</strong>
+        <%= @user.phone %>
+    </p>
+</div>
+<br> </br>
+<h3 align='center'>Turnos Publicados Activos</h3>
 <div align='center' style="display: flex; flex-flow: wrap; ">
     <% @turnos.each do |turno|%>
         <%if turno.id_usuario == current_user.id and turno.estado == "ACTIVO"%>
@@ -46,11 +47,11 @@
         <% end %>
 </div>
 <% end %>
-<br/>
+<br> </br>
 
-<h3>Turnos Publicados Confirmados</h3>
+<h3 align='center'>Turnos Publicados Confirmados</h3>
 
-<div style="display: flex; flex-flow: wrap; ">
+<div align='center' style="display: flex; flex-flow: wrap; ">
     <% @turnos.each do |turno|%>
         <%if turno.id_usuario == current_user.id and turno.estado == "CONFIRMADO"%>
             <div style="border: solid 1px; width: 200px; 
@@ -69,10 +70,10 @@
         <% end %>
 </div>
 <% end %>
-<br/>
+<br> </br>
 
-<h3>Turnos Publicados Completados</h3>
-<div style="display: flex; flex-flow: wrap; ">
+<h3 align='center'>Turnos Publicados Completados</h3>
+<div align='center' style="display: flex; flex-flow: wrap; ">
     <% @turnos.each do |turno|%>
         <%if turno.id_usuario == current_user.id and turno.estado == "COMPLETADO"%>
             <div style="border: solid 1px; width: 200px; 
