--- a/app/views/turnos/index.html.erb
+++ b/app/views/turnos/index.html.erb
@@ -11,11 +11,11 @@
 <h3 class = "title is-4 has-text-dark" >Turnos Activos</h3>
 <div align='center'style="display: flex; flex-flow: wrap; background-color:">
     <% @turnos.each do |turno|%>
-        <%if turno.id_usuario != current_user.id and turno.estado == "ACTIVO"%>
+        <%if turno.user_id != current_user.id and turno.estado == "ACTIVO"%>
             <div style="border: solid 1px; width: 200px; 
             padding: 10px; align-text: center; margin: 5px; background-color: lightblue;">
-            <b>ID Conductor </b><p><%= @users.find(turno.id_usuario).id%></p>
-            <b>Conductor </b><p><%= @users.find(turno.id_usuario).name%></p>
+            <b>ID Conductor </b><p><%= @users.find(turno.user_id).id%></p>
+            <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
             <b>Cantidad asientos </b><p><%= turno.cantidad_asientos%></p>
             <b>Hora salida </b><p><%= turno.hora_salida%></p>
             <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
@@ -31,12 +31,12 @@
 <h3 class = "title is-4 has-text-dark" >Turnos Solicitados Confirmados</h3>
 <div align='center' style="display: flex; flex-flow: wrap; ">
     <% @requests.each do |request|%>
-        <%if request.id_usuario_solicitud == current_user.id %>
+        <%if request.user_id_solicitud == current_user.id %>
             <% @turno = Turno.find(request.id_publicacion)%> 
             <%if @turno.estado == "CONFIRMADO"%>
                 <div style="border: solid 1px; width: 200px; 
                 padding: 10px; align-text: center; margin: 5px; background-color: lightblue">
-                <% @user = User.find(@turno.id_usuario)%>
+                <% @user = User.find(@turno.user_id)%>
                 <b>ID Conductor </b><p><%= @user.id%></p>
                 <b>Conductor </b><p><%= @user.name%></p>
                 <b>Cantidad asientos </b><p><%= @turno.cantidad_asientos%></p>
@@ -56,7 +56,7 @@
 <h3 class = "title is-4 has-text-dark" >Turnos Solicitados Completados</h3>
 <div align='center' style="display: flex; flex-flow: wrap; ">
     <% @requests.each do |request|%>
-        <%if request.id_usuario_solicitud == current_user.id %>
+        <%if request.user_id_solicitud == current_user.id %>
             <% @turno = Turno.find(request.id_publicacion)%> 
             <%if @turno.estado == "COMPLETADO"%>
                 <div style="border: solid 1px; width: 200px; 
