--- a/app/views/turnos/show.html.erb
+++ b/app/views/turnos/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
     <strong>ID Usuario: </strong>
-    <%= @turno.id_usuario %>
+    <%= @turno.user_id %>
 </p>
 <p>
     <strong>Cantidad Asientos: </strong>
@@ -29,15 +29,15 @@
     <%= @turno.tipo %>
 </p>
 
-<% if @turno.id_usuario == current_user.id%>
+<% if @turno.user_id == current_user.id%>
     <br/><h3>Solicitudes Recibidas Procesadas</h3><br/>
     <div style="display: flex; flex-flow: wrap;">
         <% @requests.each do |request|%>
-            <%if request.estado == "ACEPTADO and @turno.id_usuario == current_user.id"%>
+            <%if request.estado == "ACEPTADO and @turno.user_id == current_user.id"%>
                 <div style="border: solid 1px; width: 200px; padding: 10px; align-text: center; margin: 5px;">
                 <p>Id Solicitud: <%= request.id%></p>
-                <p>Id Usuario Turno: <%= request.id_usuario%></p>
-                <p>Id Usuario Solicitud: <%= request.id_usuario_solicitud%></p>
+                <p>Id Usuario Turno: <%= request.user_id%></p>
+                <p>Id Usuario Solicitud: <%= request.user_id_solicitud%></p>
                 <p>Id Publicación: <%= request.id_publicacion%></p>
                 <p>Estado: <%= request.estado%></p>
                 <p>Descripción: <%= request.descripcion%></p>
@@ -47,11 +47,9 @@
 <% end %>
 
 <%= button_to "Volver", turnos_index_path,:id => "boton_volver", :class => "button is-primary is-inverted is-rounded is-outlined", method: :get%>
-<% if @turno.id_usuario == current_user.id %>
-    <%= button_to "Editar", turnos_edit_path(:id => @turno.id),:id => "boton_volver", :class => "button is-primary is-inverted is-rounded is-outlined", method: :post%>
-    <%= link_to 'Editar', turnos_edit_path(:id => @turno.id)%>
+<% if @turno.user_id == current_user.id %>
+    <%= link_to 'Editar', turnos_edit_path(:id => @turno.id), class: "button is-primary is-inverted is-rounded is-outlined"%>
     <%= button_to "Eliminar", turnos_delete_path(:id => @turno.id),:id => "boton_volver", :class => "button is-primary is-inverted is-rounded is-outlined", method: :delete%>
 <% else %>
-    <%= button_to "Solicitar", requests_new_path(:id => @turno.id),:id => "boton_volver", :class => "button is-primary is-inverted is-rounded is-outlined", method: :new%>
-    <%= link_to 'Solicitar', requests_new_path(:id => @turno.id)%>
+    <%= link_to 'Solicitar', requests_new_path(:id => @turno.id), class: "button is-primary is-inverted is-rounded is-outlined"%>
 <% end %>
