--- a/app/views/resenas/edit.html.erb
+++ b/app/views/resenas/edit.html.erb
@@ -2,18 +2,9 @@
 
 <%= form_with(model: @resena, method: :patch, url: resenas_update_path(:id => @resena.id)) do |form| %>
 
-    <div>
-        <%= form.label :ID_Viaje %>
-        <%= form.text_field :id_viaje%>
-    </div>
-    <div>
-        <%= form.label :ID_Cliente_Evaluador %>
-        <%= form.text_field :id_cliente_evaluador%>
-    </div>
-    <div>
-        <%= form.label :ID_Cliente_Evaluado %>
-        <%= form.text_field :id_cliente_evaluado%>
-    </div>
+    <%= form.hidden_field :turno_id, value: @resena.turno.id%>
+    <%= form.hidden_field :user_id, value: current_user.id%>
+
     <div>
         <%= form.label :Contenido %>
         <%= form.text_field :contenido%>
@@ -27,5 +18,5 @@
         <%= print("Se apreto el boton") %>
     </div>
 
-<%= link_to 'Volver', resenas_index_path %>
+<%= link_to 'Volver', turnos_show_path(:id => @resena.turno.id) %>
 <% end %>
