--- a/app/views/resenas/new.html.erb
+++ b/app/views/resenas/new.html.erb
@@ -2,6 +2,9 @@
 
 <%= form_with(model: @resena, method: :post) do |form| %>
 
+    <%= form.hidden_field :turno_id, value: @id_viaje%>
+    <%= form.hidden_field :user_id, value: current_user.id%>
+
     <div>
         <%= form.label :Contenido %>
         <%= form.text_field :contenido%>
@@ -10,9 +13,6 @@
         <%= form.label :Calificación %>
         <%= form.text_field :calificacion%>
     </div>
-    <%= form.hidden_field :id_viaje, value: @id_viaje%>
-    <%= form.hidden_field :turnos, value: current_user.name%>
-    <%= form.hidden_field :users, value: '---------'%>
     <div>
         <%= form.submit 'Subir reseña' %>
     </div>
