--- a/app/views/resenas/show.html.erb
+++ b/app/views/resenas/show.html.erb
@@ -1,16 +1,16 @@
 <h1>Reseña</h1>
 
 <p>
-    <strong>ID Reseña: </strong>
-    <%= @resena.id %>
+    <strong>ID Viaje: </strong>
+    <%= @resena.turno.id %>
 </p>
 <p>
-    <strong>ID Cliente Evaluador: </strong>
-    <%= @resena.id_cliente_evaluador %>
+    <strong>Nombre Pasajero: </strong>
+    <%= @resena.user.name %>
 </p>
 <p>
-    <strong>ID Cliente Evaluado: </strong>
-    <%= @resena.id_cliente_evaluado %>
+    <strong>Nombre Conductor: </strong>
+    <%= @user_conductor.name %>
 </p>
 <p>
     <strong>Contenido: </strong>
@@ -22,6 +22,8 @@
 </p>
 
 
-<%= link_to 'Volver', resenas_index_path%>
-<%= link_to 'Editar', resenas_edit_path(:id => @resena.id)%>
-<%= link_to 'Eliminar', resenas_delete_path(:id => @resena.id), method: :delete%>
+<%= link_to 'Volver', turnos_show_path(:id => @resena.turno.id)%>
+<% if @resena.user.id == current_user.id%>
+    <%= link_to 'Editar', resenas_edit_path(:id => @resena.id)%>
+    <%= link_to 'Eliminar', resenas_delete_path(:id => @resena.id), method: :delete%>
+<% end %>
