--- a/app/views/turnos/show.html.erb
+++ b/app/views/turnos/show.html.erb
@@ -28,29 +28,30 @@
     <strong>Tipo: </strong>
     <%= @turno.tipo %>
 </p>
+<p>
+    <strong>Estado: </strong>
+    <%= @turno.estado %>
+</p>
 
-<% if @turno.id_usuario == current_user.id%>
-    <br/><h3>Solicitudes Recibidas Procesadas</h3><br/>
-    <div style="display: flex; flex-flow: wrap;">
-        <% @requests.each do |request|%>
-            <%if request.estado == "ACEPTADO and @turno.id_usuario == current_user.id"%>
-                <div style="border: solid 1px; width: 200px; padding: 10px; align-text: center; margin: 5px;">
-                <p>Id Solicitud: <%= request.id%></p>
-                <p>Id Usuario Turno: <%= request.id_usuario%></p>
-                <p>Id Usuario Solicitud: <%= request.id_usuario_solicitud%></p>
-                <p>Id Publicación: <%= request.id_publicacion%></p>
-                <p>Estado: <%= request.estado%></p>
-                <p>Descripción: <%= request.descripcion%></p>
-            <% end %>
-    </div>
-    <% end %>
-<% end %>
-
-<%= link_to 'Volver', turnos_index_path%>
-<%= link_to 'Reseñas', resenas_index_path(:id_viaje => @turno.id)%>
+<br/>
+<%= link_to 'Volver ', turnos_index_path%>
+<br/>
 <% if @turno.id_usuario == current_user.id %>
     <%= link_to 'Editar', turnos_edit_path(:id => @turno.id)%>
     <%= link_to 'Eliminar', turnos_delete_path(:id => @turno.id), method: :delete%>
 <% else %>
-    <%= link_to 'Solicitar', requests_new_path(:id => @turno.id) %>
+    <%= link_to 'Solicitar', requests_new_path(:id => @turno.id) %><br/>
+    <% if @turno.estado == 'COMPLETADO'%>
+        <%= link_to 'Agregar reseña ', resenas_new_path(:id_viaje => @turno.id)%>
+    <% end %>
+<% end %>
+<br/>
+
+<% if @turno.estado == 'COMPLETADO'%>
+    <h3>Reseñas Viaje</h3>
+    <% @resenas.each do |resena|%>
+        <% if resena.turno_id == @turno.id%>
+            <li>Nombre Pasajero: <%= resena.user.name%>. Calificación: <%= resena.calificacion%>                  <%= link_to 'Ver detalles', resenas_show_path(:id => resena.id) %></li>
+        <% end %>
+    <% end %>
 <% end %>
